--- a/src/styles/ContentCircle.module.css
+++ b/src/styles/ContentCircle.module.css
@@ -209,6 +209,7 @@ body {
 
   .circleContainer {
     width: 50%;
+    height: 90vh;
     overflow: hidden;
     padding: 2rem 0;
   }
