--- a/src/styles/GalleryCarousel.module.css
+++ b/src/styles/GalleryCarousel.module.css
@@ -30,7 +30,7 @@ p {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 130vh;
+  height: 170vh;
   padding: 4rem;
   background-color: var(--gallery-color);
 }
@@ -251,7 +251,7 @@ p {
   }
 
   .galleryContainer {
-    height: 150vh;
+    height: 160vh;
   }
 
   .galleryImage {
@@ -285,7 +285,7 @@ p {
   }
 
   .galleryContainer {
-    height: 160vh;
+    height: 170vh;
   }
 
   .galleryTitle {
@@ -345,7 +345,7 @@ p {
   .galleryContainer {
     flex-direction: row;
     justify-content: center;
-    height: 100vh;
+    height: 110vh;
     padding-bottom: 4rem;
   }
 
